Added upsell and modal

--- a/src/App.css
+++ b/src/App.css
@@ -36,7 +36,7 @@
 
 .buy_button_big {
   color: #545454;
-  font-family: "Rancho", sans-serif;
+  font-family: "Anton", sans-serif;
   box-shadow: 0 4px 8px 0 #ccc; 
   font-size: 90px;
   padding: 70px;
