--- a/src/App.css
+++ b/src/App.css
@@ -3,17 +3,16 @@
 /* @import url("https://fonts.googleapis.com/css?family=Cinzel|Fauna+One"); */
 @import url("https://fonts.googleapis.com/css?family=Merriweather|Open+Sans|Sofia|Cinzel|Fauna+One&effect=neon|outline|emboss|shadow-multiple");
 
-
 /* General: */
 
 .font {
-  font-family: 'Open Sans', sans-serif;
+  font-family: "Open Sans", sans-serif;
 }
 
 .font-and-color {
   color: #545454;
   /* font-family: 'Fauna One', sans-serif; */
-  font-family: 'Open Sans', sans-serif;
+  font-family: "Open Sans", sans-serif;
 }
 
 .large-icon {
@@ -29,7 +28,6 @@
   margin-top: -10px;
 }
 
-
 /* Used in Payment page */
 .h1-payment {
   color: #545454;
@@ -39,11 +37,12 @@
   font-family: Merriweather, serif;
 }
 
-.button-payment-pay, .button-payment-pay:disabled {
+.button-payment-pay,
+.button-payment-pay:disabled {
   box-shadow: 0 6px 10px 0 #ccc;
   color: white;
-  background-color: #0F3B5F;
-  border: 2px solid #0F3B5F;
+  background-color: #0f3b5f;
+  border: 2px solid #0f3b5f;
   border-radius: 3px;
   padding: 5px 10px;
   text-transform: uppercase;
@@ -55,8 +54,8 @@
 }
 
 .button-payment-pay:hover {
-  background-color: #0F3B5F;
-  border: 2px solid #0F3B5F;
+  background-color: #0f3b5f;
+  border: 2px solid #0f3b5f;
   padding: 10px;
   /* Button goes up onHover: */
   top: -3px;
@@ -76,9 +75,9 @@
 
 .button-payment-disconnet {
   box-shadow: 0 6px 10px 0 #ccc;
-  background-color: #CC9752;
+  background-color: #cc9752;
   color: white;
-  border: 1px solid #545454; 
+  border: 1px solid #545454;
   /* background: #fff;
   color: #FF9912;
   border: 1px solid #FF9912; */
@@ -107,15 +106,15 @@
 .button-payment-connect {
   box-shadow: 0 6px 10px 0 #ccc;
   background: #fff;
-  color: #CC9752;
-  border: 1px solid #CC9752;
+  color: #cc9752;
+  border: 1px solid #cc9752;
   border-radius: 3px;
   padding: 5px 10px;
   text-transform: uppercase;
 }
 
 .button-payment-connect:hover {
-  background-color: #CC9752;
+  background-color: #cc9752;
   border: 1px solid #545454;
 }
 
@@ -138,10 +137,10 @@
   padding: 60px;
   margin: 40px;
   /* border: 1px solid #0F3B5F;  */
-  border-top: 1px solid #0F3B5F; 
-  border-right: 1px solid #0F3B5F; 
-  border-bottom: 1px solid #0F3B5F; 
-  border-left: 1px solid #0F3B5F; 
+  border-top: 1px solid #0f3b5f;
+  border-right: 1px solid #0f3b5f;
+  border-bottom: 1px solid #0f3b5f;
+  border-left: 1px solid #0f3b5f;
   border-radius: 10px;
 }
 
@@ -166,7 +165,7 @@
 
 .button-go-back {
   color: #545454;
-  font-family: 'Open Sans', sans-serif;
+  font-family: "Open Sans", sans-serif;
   font-size: 15px;
   box-shadow: 0 4px 8px 0 #ccc;
 }
@@ -184,7 +183,7 @@
 }
 
 .not-underlined {
-  text-decoration: none
+  text-decoration: none;
 }
 
 /* Header Component */
@@ -211,27 +210,27 @@
 }
 
 .custom-link {
-  color: #0F3B5F;
+  color: #0f3b5f;
   text-decoration: none;
-  font-family: 'Open Sans', sans-serif;
+  font-family: "Open Sans", sans-serif;
 }
 
 .custom-link:hover {
-  color: #0F3B5F;
+  color: #0f3b5f;
   text-decoration: underline;
-  font-family: 'Open Sans', sans-serif;
+  font-family: "Open Sans", sans-serif;
 }
 
 .success-icon {
   color: #545454;
   font-size: 3em;
-  margin-bottom: 0.80em;
+  margin-bottom: 0.8em;
 }
 
 .button-go-back-thankyou {
   color: white;
-  background: #0F3B5F;
-  font-family: 'Open Sans', sans-serif;
+  background: #0f3b5f;
+  font-family: "Open Sans", sans-serif;
   font-size: 15px;
   box-shadow: 0 4px 8px 0 #ccc;
   /* Button goes up onHover: */
@@ -241,7 +240,7 @@
 }
 
 .button-go-back-thankyou:hover {
-  background-color: #0F3B5F;
+  background-color: #0f3b5f;
   /* Button goes up onHover: */
   top: -3px;
 }
@@ -270,10 +269,10 @@
   padding: 60px;
   margin: 30px;
   /* border: 1px solid #0F3B5F;  */
-  border-top: 1px solid rgba(248,249,250,255); 
-  border-right: 1px solid rgba(248,249,250,255); 
-  border-bottom: 1px solid rgba(248,249,250,255); 
-  border-left: 1px solid rgba(248,249,250,255); 
+  border-top: 1px solid rgba(248, 249, 250, 255);
+  border-right: 1px solid rgba(248, 249, 250, 255);
+  border-bottom: 1px solid rgba(248, 249, 250, 255);
+  border-left: 1px solid rgba(248, 249, 250, 255);
   border-radius: 10px;
 }
 
@@ -289,8 +288,8 @@
 
 .button-buy-product {
   color: white;
-  background: #0F3B5F;
-  font-family: 'Open Sans', sans-serif;
+  background: #0f3b5f;
+  font-family: "Open Sans", sans-serif;
   box-shadow: 0 4px 8px 0 #ccc;
   padding: 10px;
   /* Button goes up onHover: */
@@ -301,7 +300,7 @@
 }
 
 .button-buy-product:hover {
-  background-color: #0F3B5F;
+  background-color: #0f3b5f;
   /* Button goes up onHover: */
   top: -3px;
 }
@@ -331,32 +330,30 @@
   padding-bottom: 10px;
   padding-right: 60px;
   margin: 40px;
-  border: 2px solid rgba(248,249,250,255);
+  border: 2px solid rgba(248, 249, 250, 255);
   border-radius: 10px;
 }
 
 .products-border-one {
   box-shadow: 0 4px 8px 0 #ccc;
   padding: 30px;
-  border: 1px solid #0F3B5F; 
+  border: 1px solid #0f3b5f;
   border-radius: 10px;
 }
 
-
 .button-payment-pay:hover {
-background-color: #0F3B5F;
-border: 2px solid #0F3B5F;
-padding: 10px;
-/* Button goes up onHover: */
-top: -3px;
+  background-color: #0f3b5f;
+  border: 2px solid #0f3b5f;
+  padding: 10px;
+  /* Button goes up onHover: */
+  top: -3px;
 }
-
 
 .button-remove-from-basket {
   box-shadow: 0 6px 10px 0 #ccc;
-  background-color: #CC9752;
+  background-color: #cc9752;
   color: white;
-  border: 1px solid #545454; 
+  border: 1px solid #545454;
   /* background: #fff;
   color: #FF9912;
   border: 1px solid #FF9912; */
@@ -385,15 +382,15 @@ top: -3px;
 .button-add-to-basket {
   box-shadow: 0 6px 10px 0 #ccc;
   background: #fff;
-  color: #CC9752;
-  border: 1px solid #CC9752;
+  color: #cc9752;
+  border: 1px solid #cc9752;
   border-radius: 3px;
   padding: 5px 10px;
   text-transform: uppercase;
 }
 
 .button-add-to-basket:hover {
-  background-color: #CC9752;
+  background-color: #cc9752;
   border: 1px solid #545454;
 }
 
@@ -413,7 +410,7 @@ top: -3px;
   /* padding-bottom: 10px; */
   /* padding-right: 60px; */
   margin: 40px;
-  border: 2px solid rgba(248,249,250,255);
+  border: 2px solid rgba(248, 249, 250, 255);
   border-radius: 10px;
   height: auto;
 }
@@ -429,18 +426,18 @@ top: -3px;
   box-shadow: 0 4px 8px 0 #ccc;
   padding: 30px;
   /* margin: 40px; */
-  border: 1px solid #0F3B5F; 
+  border: 1px solid #0f3b5f;
   border-radius: 10px;
 }
 
 .button-buy-product-2 {
   color: white;
-  background: #0F3B5F;
-  font-family: 'Open Sans', sans-serif;
+  background: #0f3b5f;
+  font-family: "Open Sans", sans-serif;
   box-shadow: 0 4px 8px 0 #ccc;
   padding: 10px;
   margin-top: 30px;
-  border: 1px solid #545454; 
+  border: 1px solid #545454;
   /* Button goes up onHover: */
   position: relative;
   top: 0;
@@ -449,8 +446,8 @@ top: -3px;
 }
 
 .button-buy-product-2:hover {
-  background-color: #0F3B5F;
-  border: 1px solid #545454; 
+  background-color: #0f3b5f;
+  border: 1px solid #545454;
   /* Button goes up onHover: */
   top: -3px;
 }
@@ -470,18 +467,18 @@ top: -3px;
 }
 
 .basket-header-background {
-  background-color: rgba(248,249,250,255);
+  background-color: rgba(248, 249, 250, 255);
 }
 
 /* MERCHANT */
 .moving-button {
   border-radius: 4px;
-  font-family: 'Open Sans', sans-serif;
+  font-family: "Open Sans", sans-serif;
   text-transform: uppercase;
-  background-color: #CC9752;
+  background-color: #cc9752;
   box-shadow: 0 4px 8px 0 #ccc;
   border: none;
-  color: #FFFFFF;
+  color: #ffffff;
   text-align: center;
   /* font-size: 28px; */
   /* padding: 10px; */
@@ -499,7 +496,7 @@ top: -3px;
 }
 
 .moving-button span:after {
-  content: '\00bb';
+  content: "\00bb";
   font-size: 28px;
   position: absolute;
   opacity: 0;
@@ -518,7 +515,7 @@ top: -3px;
 }
 
 .moving-button:hover {
-  background-color: #CC9752;
+  background-color: #cc9752;
   /* Button goes up onHover: */
 }
 
@@ -548,8 +545,8 @@ top: -3px;
 
 .merchant-button {
   color: white;
-  background: #0F3B5F;
-  font-family: 'Open Sans', sans-serif;
+  background: #0f3b5f;
+  font-family: "Open Sans", sans-serif;
   font-size: 15px;
   box-shadow: 0 4px 8px 0 #ccc;
   /* Button goes up onHover: */
@@ -559,7 +556,7 @@ top: -3px;
 }
 
 .merchant-button:hover {
-  background-color: #0F3B5F;
+  background-color: #0f3b5f;
   /* Button goes up onHover: */
   top: -3px;
 }
@@ -580,7 +577,7 @@ top: -3px;
   /* padding-bottom: 10px; */
   /* padding-right: 60px; */
   /* margin: 40px; */
-  border: 2px solid rgba(248,249,250,255);
+  border: 2px solid rgba(248, 249, 250, 255);
   border-radius: 10px;
   height: auto;
 }
@@ -605,26 +602,26 @@ top: -3px;
 
 .border-bottom {
   box-shadow: 0 6px 10px 0 #ccc;
-  background-color: rgba(0,0,0,.2);
+  background-color: rgba(0, 0, 0, 0.2);
 }
 
 .button-edit {
   /* margin-top: -5px; */
   width: 200px;
   height: 40px;
-  background: #CC9752;
+  background: #cc9752;
   border: none;
   border-radius: 5px;
   position: relative;
-  border-bottom: 4px solid #CC9752;
+  border-bottom: 4px solid #cc9752;
   color: white;
   /* font-weight: 600; */
-  font-family: 'Open Sans', sans-serif;
+  font-family: "Open Sans", sans-serif;
   /* text-shadow: 1px 1px 1px rgba(0,0,0,.4); */
   /* font-size: 15px; */
   text-align: left;
   text-indent: 5px;
-  box-shadow: 0px 3px 0px 0px rgba(0,0,0,.2);
+  box-shadow: 0px 3px 0px 0px rgba(0, 0, 0, 0.2);
   cursor: pointer;
 }
 
@@ -640,7 +637,7 @@ top: -3px;
 }
 
 .button-edit:active {
-  box-shadow: 0px 2px 0px 0px rgba(0,0,0,.2);
+  box-shadow: 0px 2px 0px 0px rgba(0, 0, 0, 0.2);
   top: 1px;
   outline: none !important;
   border: none !important;
@@ -649,11 +646,11 @@ top: -3px;
 
 .button-add-product {
   color: white;
-  background: #CC9752;
+  background: #cc9752;
   border: none;
   border-radius: 5px;
   width: 100%;
-  font-family: 'Open Sans', sans-serif;
+  font-family: "Open Sans", sans-serif;
   font-size: 15px;
   box-shadow: 0 4px 8px 0 #ccc;
   /* Button goes up onHover: */
@@ -682,11 +679,11 @@ top: -3px;
 
 .button-multifunctional {
   color: white;
-  background: #0F3B5F;
+  background: #0f3b5f;
   border: none;
   border-radius: 5px;
   width: 20%;
-  font-family: 'Open Sans', sans-serif;
+  font-family: "Open Sans", sans-serif;
   font-size: 15px;
   box-shadow: 0 4px 8px 0 #ccc;
   /* Button goes up onHover: */
@@ -696,7 +693,7 @@ top: -3px;
 }
 
 .button-multifunctional:hover {
-  background-color: #0F3B5F;
+  background-color: #0f3b5f;
   /* Button goes up onHover: */
   top: -3px;
 }
@@ -710,4 +707,3 @@ top: -3px;
   outline: none !important;
   box-shadow: none !important;
 }
-
